Add user data files to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
-MJNIndexForTableView.xcodeproj/project.xcworkspace/xcuserdata/yesjun.xcuserdatad/UserInterfaceState.xcuserstate
+MJNIndexForTableView.xcodeproj/project.xcworkspace/xcuserdata/yesjun.xcuserdatad/
+MJNIndexForTableView.xcodeproj/xcuserdata/yesjun.xcuserdatad/
+MJNIndexForTableView.xcodeproj/project.xcworkspace/xcshareddata/
